--- a/index.html
+++ b/index.html
@@ -1,40 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trip Over This</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-<!-- ========= Just basic HTML to display results - not for design ============= -->
-    <h2>Please enter city below.</h2>
-    <form>
-        <!-- City input is required -->
-        <label for="city-name"> City
-            <input type="text" id="city-name">
-        </label>
-        <!-- Keyword (could be topic/area of interest) is optional -->
-        <label for="keyword"> Keyword (optional)
-            <input type="text" id="keyword">
-        </label>
-        <!-- Drop down for dates - these are the only options offered by Eventful API w/ exception of past events, which I assume we don't want... -->
-        <select name="date-options" id="date">
-            <option value="Today">Today</option>
-            <option value="Future">Future</option>
-            <option value="This Week">This Week</option>
-            <option value="Next Week">Next Week</option>
-        </select>
-        <input type="submit" id="get-events">
-    </form>
+   
+        <!-- Main jumbotron for the title and description of what our app does -->
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Trip Over This!</h1>
+                <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and
+                    you
+                    want to find some things to distract you from your misery. Do you have to travel to an all-day
+                    accounting meeting that your boss sent you to because she didn't want to go? Are you in an
+                    unfamiliar town becuase your uncle is marrying a stripper half his age? Just use this app to
+                    find something to help you check out or relieve your frustrations. Heck, maybe just skip
+                    the
+                    meeting or the wedding altogether and just do the fun stuff you find here, because who really
+                    wants
+                    to deal with boredom or drama?</p>
+            </div>
+        </div>
 
-    <div id="events"></div>
-<!-- =============== End of test HTML ================= -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Stuff to Do!</h2>
+                    <h4>Find something to take your mind off of your pain</h4>
+                    <br>
+                    <form>
+                        <!-- City input is required -->
+                        <label for="city-name"> City
+                            <input type="text" id="city-name">
+                        </label>
+                        <!-- Keyword (could be topic/area of interest) is optional -->
+                        <label for="keyword"> Keyword (optional)
+                            <input type="text" id="keyword">
+                        </label>
+                        <br>
+                        <!-- Drop down for dates - these are the only options offered by Eventful API w/ exception of past events, which I assume we don't want... -->
+                        <select name="date-options" id="date">
+                            <option value="Today">Today</option>
+                            <option value="Future">Future</option>
+                            <option value="This Week">This Week</option>
+                            <option value="Next Week">Next Week</option>
+                        </select>
+                        <!-- <input type="submit" id="get-events"> -->
+                    </form>
+                    <br>
+                    <p><a class="btn btn-secondary" href="#" role="button">Click the Fun Button! &raquo;</a></p>
+                </div>
 
+                <div class="col-md-6">
+                    <h2>Anesthesia!</h2>
+                    <h4>Gorge your misery away and check out with booze</h4>
+                    <br>
+                    <form>
+                        <!-- City input is required -->
+                        <label for="city-name"> City
+                            <input type="text" id="city-name">
+                        </label>
+                        <!-- Keyword (could be topic/area of interest) is optional -->
+                        <label for="keyword"> Keyword (optional)
+                            <input type="text" id="keyword">
+                        </label>
+                        <br>
+                        <!-- Drop down for dates - these are the only options offered by Eventful API w/ exception of past events, which I assume we don't want... -->
+                        <select name="date-options" id="date">
+                            <option value="Today">Today</option>
+                            <option value="Future">Future</option>
+                            <option value="This Week">This Week</option>
+                            <option value="Next Week">Next Week</option>
+                        </select>
+                        <!-- <input type="submit" id="get-events"> -->
+                    </form>
+                    <br>
+                    <p><a class="btn btn-secondary" href="#" role="button">Click the Fun Button! &raquo;</a></p>
+                </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="assets/js/app.js"></script>
+            </div>
+
+        </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/app.js"></script>
 </body>
+
 </html>
