Adding simpleResults.html and some housekeeping on index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-   
+    <div class="container-fluid">
         <!-- Main jumbotron for the title and description of what our app does -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -87,8 +87,8 @@
                 </div>
 
             </div>
-
         </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
