--- a/index.html
+++ b/index.html
@@ -38,25 +38,22 @@
                     <br>
                     <form>
                         <!-- City input is required -->
-                        <label for="city-name"> City
-                            <input type="text" id="city-name">
+                        <label for="city-events"> City
+                            <input type="text" id="city-events">
                         </label>
                         <!-- Keyword (could be topic/area of interest) is optional -->
-                        <label for="keyword"> Keyword (optional)
-                            <input type="text" id="keyword">
+                        <label for="events-keyword"> Keyword (optional)
+                            <input type="text" id="events-keyword">
                         </label>
                         <br>
                         <!-- Drop down for dates - these are the only options offered by Eventful API w/ exception of past events, which I assume we don't want... -->
-                        <select name="date-options" id="date">
-                            <option value="Today">Today</option>
-                            <option value="Future">Future</option>
-                            <option value="This Week">This Week</option>
-                            <option value="Next Week">Next Week</option>
-                        </select>
+                        <label for="event-date"> Date (YYYY-MM-DD)
+                            <input type="text" id="event-date">
+                        </label>
                         <!-- <input type="submit" id="get-events"> -->
                     </form>
                     <br>
-                    <p><a class="btn btn-secondary" href="#" role="button">Click the Fun Button! &raquo;</a></p>
+                    <p><a class="btn btn-secondary" href="#" role="button" id="get-events">Click the Fun Button! &raquo;</a></p>
                 </div>
 
                 <div class="col-md-6">
@@ -89,10 +86,14 @@
             </div>
         </div>
     </div>
-
+    
+    
+    <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <!-- This link is causing an error -->
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script> -->
+    <!-- end of error link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
