Added Font Awesome angry face icon and animated it with animate.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Trip Over This</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -16,7 +18,7 @@
         <!-- Main jumbotron for the title and description of what our app does -->
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Trip Over This!</h1>
+                <h1 class="display-4"><i class="far fa-angry animated hinge"></i>Trip Over This!</h1>
                 <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and
                     you
                     want to find some things to distract you from your misery. Do you have to travel to an all-day
