--- a/suggestions.html
+++ b/suggestions.html
@@ -8,6 +8,8 @@
     <title>Trip Over This</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -17,7 +19,7 @@
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">In Case of Emergency</h1>
+                <h1 class="display-4"><i class="far fa-angry animated hinge"></i>In Case of Emergency</h1>
                 <p class="lead">You're halfway through that mind-numbing accounting meeting and you're stuck there
                     until it's done. Sneak a peek at these:</p>
             </div>
