--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <!-- <input type="submit" id="get-events"> -->
                     </form>
                     <br>
-                    <p><a class="btn btn-secondary" href="#" role="button">Click the Fun Button! &raquo;</a></p>
+                    <p><a id="brewerySubmit" class="btn btn-secondary" href="#" role="button">Click the Fun Button! &raquo;</a></p>
                 </div>
 
             </div>
@@ -90,10 +90,6 @@
     
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- This link is causing an error -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script> -->
-    <!-- end of error link -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
