--- a/simpleResults.html
+++ b/simpleResults.html
@@ -32,6 +32,7 @@
                     <th scope="col">What You Could Be Doing</th>
                     <th scope="col">Where You Could Be Doing It</th>
                     <th scope="col">When It's Happening</th>
+                    <th scope="col">Get Tickets</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,18 +41,21 @@
                     <td>Drinking</td>
                     <td>At the Bar</td>
                     <td>Right Now!</td>
+                    <td>Link</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>Gorging</td>
                     <td>At the Restaurant</td>
                     <td>Right Now!</td>
+                    <td>Link</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Monster Truck Rally</td>
                     <td>Smash & Crash Stadium</td>
                     <td>Tomorrow at 7:00 PM</td>
+                    <td>Link</td>
                 </tr>
             </tbody>
         </table>
