--- a/suggestions.html
+++ b/suggestions.html
@@ -15,9 +15,9 @@
 
 <body>
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="background-container">
 
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
             <div class="container">
                 <h1 class="display-4"><i class="far fa-angry animated hinge"></i>In Case of Emergency</h1>
                 <p class="lead">You're halfway through that mind-numbing accounting meeting and you're stuck there
