--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Trip Over This</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -16,7 +17,7 @@
 <body>
     <div class="container-fluid">
         <!-- Main jumbotron for the title and description of what our app does -->
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
             <div class="container">
                 <h1 class="display-4"><i class="far fa-angry animated hinge"></i>Trip Over This!</h1>
                 <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and
@@ -32,64 +33,67 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2>Stuff to Do!</h2>
-                    <h4>Find something to take your mind off of your pain</h4>
-                    <br>
-                    <form>
-                        <!-- City input is required -->
-                        <label for="city-events"> City
-                            <input type="text" id="city-events">
-                        </label>
-                        <!-- Keyword (could be topic/area of interest) is optional -->
-                        <label for="events-keyword"> Keyword (optional)
-                            <input type="text" id="events-keyword">
-                        </label>
-                        <br>
-                        <!-- Drop down for dates - these are the only options offered by Eventful API w/ exception of past events, which I assume we don't want... -->
-                        <label for="event-date"> Date (YYYY-MM-DD)
-                            <input type="text" id="event-date">
-                        </label>
-                        <!-- <input type="submit" id="get-events"> -->
-                    </form>
-                    <br>
-                    <p><a class="btn btn-secondary" href="#" role="button" id="get-events">Click the Fun Button! &raquo;</a></p>
-                </div>
+        <div id="background-container">
 
-                <div class="col-md-6">
-                    <h2>Anesthesia!</h2>
-                    <h4>Gorge your misery away and check out with booze</h4>
-                    <br>
-                    <form>
-                        <!-- City input is required -->
-                        <label for="city-name"> City
-                            <input type="text" id="city-name">
-                        </label>
-                        <!-- Keyword (could be topic/area of interest) is optional -->
-                        <label for="keyword"> Keyword (optional)
-                            <input type="text" id="keyword">
-                        </label>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Stuff to Do!</h2>
+                        <h4>Find something to take your mind off of your pain</h4>
                         <br>
-                        <!-- Drop down for dates - these are the only options offered by Eventful API w/ exception of past events, which I assume we don't want... -->
-                        <select name="date-options" id="date">
-                            <option value="Today">Today</option>
-                            <option value="Future">Future</option>
-                            <option value="This Week">This Week</option>
-                            <option value="Next Week">Next Week</option>
-                        </select>
-                        <!-- <input type="submit" id="get-events"> -->
-                    </form>
-                    <br>
-                    <p><a id="brewerySubmit" class="btn btn-secondary" href="#" role="button">Click the Fun Button! &raquo;</a></p>
-                </div>
+                        <form>
+                            <!-- City input is required -->
+                            <label for="city-events"> City
+                                <input type="text" id="city-events">
+                            </label>
+                            <!-- Keyword (could be topic/area of interest) is optional -->
+                            <label for="events-keyword"> Keyword (optional)
+                                <input type="text" id="events-keyword">
+                            </label>
+                            <br>
+                            <!-- Area for dates -->
+                            <label for="event-date"> Date
+                                <input type="date" id="event-date">
+                            </label>
+                        </form>
+                        <br>
+                        <!-- <p><a class="btn btn-primary" href="#" target="_blank" role="button" id="get-events">Click the Fun Button! &raquo;</a></p> -->
+                        <button class="btn btn-primary" role="button" id="get-events">Click the Fun Button! &raquo;</button>
+                    </div>
 
+                    <div class="col-md-6">
+                        <h2>Anesthesia!</h2>
+                        <h4>Gorge your misery away and check out with booze</h4>
+                        <br>
+                        <form>
+                            <!-- City input is required -->
+                            <label for="city-name"> City
+                                <input type="text" id="city-name">
+                            </label>
+                            <!-- Keyword (could be topic/area of interest) is optional -->
+                            <label for="keyword"> Keyword (optional)
+                                <input type="text" id="keyword">
+                            </label>
+                            <br>
+                            <!-- Area for dates-->
+                            <label for="brewery-date"> Date
+                                <input type="date" id="brewery-date">
+                            </label>
+                        </form>
+                        <br>
+                        <!-- <p><a id="brewerySubmit" class="btn btn-primary" href="#" target="_blank" role="button">Click
+                                the Fun Button! &raquo;</a></p> -->
+                                <button class="btn btn-primary" role="button" id="get-breweries">Click the Fun Button! &raquo;</button>
+                            </div>
+                    </div>
+
+                </div>
             </div>
+
         </div>
     </div>
-    
-    
+
+
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
