Initial styling, added an image, cleaned up HTML

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </label>
                         </form>
                         <br>
-                        <!-- <p><a class="btn btn-primary" href="#" target="_blank" role="button" id="get-events">Click the Fun Button! &raquo;</a></p> -->
+                        <!-- <p><a id="get-events" class="btn btn-primary" href="#" target="_blank" role="button">Click the Fun Button! &raquo;</a></p> -->
                         <button class="btn btn-primary" role="button" id="get-events">Click the Fun Button! &raquo;</button>
                     </div>
 
