Adding more styling

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                     <div class="col-md-6">
                         <h2>Anesthesia!</h2>
-                        <h4>Gorge your misery away and check out with booze</h4>
+                        <h4>Check out with beer at a brewery</h4>
                         <br>
                         <form>
                             <!-- City input is required -->
