Changed brewery terminology to zomato

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
                             </label>
                             <br>
                             <!-- Area for dates-->
-                            <label for="brewery-date"> Date
-                                <input type="date" id="brewery-date">
+                            <label for="zomato-date"> Date
+                                <input type="date" id="zomato-date">
                             </label>
                         </form>
                         <br>
                         <!-- <p><a id="brewerySubmit" class="btn btn-primary" href="#" target="_blank" role="button">Click
                                 the Fun Button! &raquo;</a></p> -->
-                                <button class="btn btn-primary" role="button" id="get-breweries">Click the Fun Button! &raquo;</button>
+                                <button class="btn btn-primary" role="button" id="get-zomato">Click the Fun Button! &raquo;</button>
                             </div>
                     </div>
 
