updating events form

--- a/index.html
+++ b/index.html
@@ -47,18 +47,17 @@
                             <label for="city-events"> City
                                 <input type="text" id="city-events">
                             </label>
-                            <!-- Keyword (could be topic/area of interest) is optional -->
-                            <label for="events-keyword"> Keyword (optional)
-                                <input type="text" id="events-keyword">
-                            </label>
                             <br>
-                            <!-- Area for dates -->
-                            <label for="event-date"> Date
-                                <input type="date" id="event-date">
+                            <!-- start date -->
+                            <label for="event-start"> Start Date
+                                <input type="date" id="event-start">
+                            </label>
+                            <!-- end date -->
+                            <label for="event-end"> End Date
+                                <input type="date" id="event-end">
                             </label>
                         </form>
                         <br>
-                        <!-- <p><a id="get-events" class="btn btn-primary" href="#" target="_blank" role="button">Click the Fun Button! &raquo;</a></p> -->
                         <button class="btn btn-primary" role="button" id="get-events">Click the Fun Button! &raquo;</button>
                     </div>
 
