--- a/simpleResults.html
+++ b/simpleResults.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body onload="showEvents()">
+<body onload="showEvents();">
 
     <div class="container-fluid">
 
