Slowed down animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Main jumbotron for the title and description of what our app does -->
         <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
             <div class="container">
-                <h1 class="display-4"><i class="far fa-angry animated hinge"></i>Trip Over This!</h1>
+                <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
                 <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and
                     you
                     want to find some things to distract you from your misery. Do you have to travel to an all-day
