--- a/simpleResults.html
+++ b/simpleResults.html
@@ -20,7 +20,7 @@
 
         <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
             <div class="container">
-                <h1 class="display-4"><i class="far fa-angry animated hinge"></i>Look! You Have Options!</h1>
+                <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Look! You Have Options!</h1>
                 <p class="lead">That stripper has expensive taste so your uncle couldn't afford an open bar. Here's
                     what you can do about that:</p>
             </div>
