edits to seatgeek api call

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                         </form>
                         <br>
                         <button class="btn btn-primary" role="button" id="get-events">Click the Fun Button! &raquo;</button>
+                    <div id="event-results"></div>
                     </div>
 
 
@@ -96,6 +97,8 @@
 
     <!-- jQuery -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+    <!-- Moment js to convert times from SeatGeek API-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
