--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div id="background-container">
-            <div class="container">
+            <div id="searchForm" class="container">
                 <div class="row">
                     <div class="col-md-6">
                         <h2>Stuff to Do!</h2>
