--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div id="restaurantData"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="eventData"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
