--- a/index.html
+++ b/index.html
@@ -33,31 +33,29 @@
         </div>
 
         <div id="background-container">
-            <div id="searchForm" class="container">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div id="searchForm" class="col-md-12">
                         <h2>Anesthetizing Stuff to Do!</h2>
                         <h4>Find something to take your mind off of your pain</h4>
                         <br>
                         <form>
                             <!-- City input is required -->
-                            <label for="city-events"> City
-                                <input type="text" id="city-events">
-                            </label>
+                            <label for="city-events">City</label>
+                            <input type="text" id="city-events">
                             <br>
                             <!-- start date -->
-                            <label for="event-start"> Start Date
-                                <input type="date" id="event-start">
-                            </label>
+                            <label for="event-start">Start Date</label>
+                            <input type="date" id="event-start">
                             <!-- end date -->
-                            <label for="event-end"> End Date
-                                <input type="date" id="event-end">
-                            </label>
+                            <label for="event-end">End Date</label>
+                            <input type="date" id="event-end">
                         </form>
                         <br>
                         <button class="btn btn-primary" role="button" id="get-events">Click the Fun Button! &raquo;</button>
                         <div id="event-results"></div>
                     </div>
+                    <button id="newSearchBtn" class="btn btn-primary d-none" type="submit">New Search</button>
                 </div>
             </div>
             <div class="container">
@@ -80,8 +78,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script> -->
     <script src="assets/js/app.js"></script>
 </body>
 
