For loop and HTML changes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <input type="date" id="event-end">
                         </form>
                         <br>
-                        <button class="btn btn-primary" role="button" id="get-events">Click the Fun Button! &raquo;</button>
+                        <button class="btn btn-primary" role="button" id="get-events" onclick="saveEvents(); cityNameAJAX()">Click the Fun Button! &raquo;</button>
                         <div id="event-results"></div>
                     </div>
                     <button id="newSearchBtn" class="btn btn-primary d-none" type="submit">New Search</button>
