consolidating api calls into one function / adding user input validation

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                             <input type="date" id="event-end">
                         </form>
                         <br>
-                        <button class="btn btn-primary" role="button" id="get-events" onclick="saveEvents(); cityNameAJAX()">Click the Fun Button! &raquo;</button>
-                        <div id="event-results"></div>
+                        <div id="error-message"></div>
+                        <!-- <button class="btn btn-primary" role="button" id="get-events" onclick="saveEvents(); cityNameAJAX()">Click the Fun Button! &raquo;</button> -->
+                        <button class="btn btn-primary" role="button" id="get-info">Click the Fun Button! &raquo;</button>
                     </div>
                     <button id="newSearchBtn" class="btn btn-primary d-none" type="submit">New Search</button>
                 </div>
