minor styling changes for readability

--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
         <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
             <div class="container">
                 <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
-                <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and
-                    you
-                    want to find some things to distract you from your misery. Do you have to travel to an all-day
+                <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and you
+                    need distraction from your misery. 
+                    <p>Do you have to travel to an all-day
                     accounting meeting that your boss sent you to because she didn't want to go? Are you in an
-                    unfamiliar town becuase your uncle is marrying a stripper half his age? Just use this app to
-                    find something to help you check out or relieve your frustrations. Heck, maybe just skip
-                    the
-                    meeting or the wedding altogether and just do the fun stuff you find here, because who really
-                    wants
-                    to deal with boredom or drama?</p>
+                    unfamiliar town becuase your uncle is marrying a stripper half his age? 
+                    <p>Use this app to
+                    find something to help you check out and relieve your frustrations.</p>
             </div>
         </div>
 
@@ -37,7 +34,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Anesthetizing Stuff to Do!</h2>
-                        <h4>Find something to take your mind off of your pain</h4>
+                        <h4>Take your mind off your pain.</h4>
                         <br>
                         <form>
                             <!-- City input is required -->
