Adding search form styling

--- a/index.html
+++ b/index.html
@@ -17,24 +17,21 @@
 </head>
 <body>
     <div class="container-fluid">
-        <!-- Main jumbotron for the title and description of what our app does -->
+        <!-- Title jumbotron -->
         <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
             <div class="container">
                 <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
                 <p class="lead">For when you have to go somewhere you don't know, you don't want to be there, and you
                     need distraction from your misery. 
-                    <p>Do you have to travel to an all-day
-                    accounting meeting that your boss sent you to because she didn't want to go? Are you in an
-                    unfamiliar town becuase your uncle is marrying a stripper half his age? 
-                    <p>Use this app to
-                    find something to help you check out and relieve your frustrations.</p>
+                <p>Do you have to travel to an all-day accounting meeting that your boss sent you to because she didn't want to go? Are you in an unfamiliar town becuase your uncle is marrying a stripper half his age? 
+                <p>Use this app to find something to help you check out and relieve your frustrations.</p>
             </div>
         </div>
-
+        <!-- Form -->
         <div id="background-container">
             <div class="container">
                 <div class="row">
-                    <div id="searchForm" class="col-md-12">
+                    <div id="searchForm" class="col-md-12 shadow border rounded mt-3">
                         <h2>Anesthetizing Stuff to Do!</h2>
                         <h4>Take your mind off your pain.</h4>
                         <br>
