Minor styling changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="background-container">
             <div class="container">
                 <div class="row">
-                    <div id="searchForm" class="col-md-12 shadow border rounded mt-3">
+                    <div id="searchForm" class="col-md-12">
                         <h2>Anesthetizing Stuff to Do!</h2>
                         <h4>Take your mind off your pain.</h4>
                         <br>
