--- a/index.html
+++ b/index.html
@@ -16,46 +16,50 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <!-- Title jumbotron -->
-        <div class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
-            <div class="container">
-                <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
-                <p>When you have to go somewhere you don't know, you don't want to be there, and you need distraction from your misery. 
-                <p>Do you have to travel to an all-day accounting meeting that your boss sent you to because she didn't want to go? Are you in an unfamiliar town becuase your uncle is marrying a stripper half his age? 
-                <p>Use this app to find something to help you relieve your frustrations.</p>
-
-            </div>
+    <!-- Title jumbotron -->
+    <div id="jumboTitle" class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
+        <div class="container">
+            <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
+            <p>When you have to go somewhere you don't know, you don't want to be there, and you need distraction from your misery. 
+            <p>Do you have to travel to an all-day accounting meeting that your boss sent you to because she didn't want to go? Are you in an unfamiliar town becuase your uncle is marrying a stripper half his age? 
+            <p>Use this app to find something to help you relieve your frustrations.</p>
         </div>
-        <!-- Form -->
-        <div id="background-container">
-            <div class="container">
-                <div class="row">
-                    <div id="searchForm" class="col-md-12 shadow border rounded mt-3">
-                        <h2>Anesthetizing Stuff to Do!</h2>
-                        <h4>Take your mind off your pain.</h4>
+    </div>
+    <!-- Form -->
+    <div id="background-container">
+        <div class="container">
+            <div class="row">
+                <div id="searchForm" class="col-md-12 shadow border rounded py-2 my-3">
+                    <h2>Anesthetizing Stuff to Do!</h2>
+                    <h4>Take your mind off your pain.</h4>
+                    <br>
+                    <form>
+                        <!-- City input is required -->
+                        <label for="city-events">City</label>
+                        <input type="text" id="city-events">
                         <br>
-                        <form>
-                            <!-- City input is required -->
-                            <label for="city-events">City</label>
-                            <input type="text" id="city-events">
-                            <br>
-                            <!-- start date -->
-                            <label for="event-start">Start Date</label>
-                            <input type="date" id="event-start">
-                            <!-- end date -->
-                            <label for="event-end">End Date</label>
-                            <input type="date" id="event-end">
-                        </form>
-                        <br>
-                        <div id="error-message"></div>
-                        <button class="btn btn-primary" role="button" id="get-info">Click the Fun Button! &raquo;</button>
-                    </div>
+                        <!-- start date -->
+                        <label for="event-start">Start Date</label>
+                        <input type="date" id="event-start">
+                        <!-- end date -->
+                        <label for="event-end">End Date</label>
+                        <input type="date" id="event-end">
+                    </form>
+                    <br>
+                    <div id="error-message"></div>
+                    <button class="btn btn-primary mb-2" role="button" id="get-info">Click the Fun Button! &raquo;</button>
+                </div>
                 <div class="container">
                     <div class="row">
-                    <div class="col-md-6"><button id="newSearchBtn" class="btn btn-primary d-none" type="submit">New Search</button></div>
-                    <div class="col-md-6"><div id="city"></div><div id="startDate"></div><div id="endDate"></div></div>
-                </div>
+                        <div class="col-md-6">
+                            <button id="newSearchBtn" class="btn btn-primary d-none" type="submit">New Search</button>
+                        </div>
+                        <div class="col-md-6">
+                            <div id="city"></div>
+                            <div id="startDate"></div>
+                            <div id="endDate"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container">
