Color change to jumbotron and buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- Title jumbotron -->
-    <div id="jumboTitle" class="jumbotron jumbotron-fluid p-3 mb-2 bg-primary text-white">
+    <div id="jumboTitle" class="jumbotron jumbotron-fluid p-3 mb-2 text-white">
         <div class="container">
             <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
             <p>When you have to go somewhere you don't know, you don't want to be there, and you need distraction from your misery. 
@@ -29,7 +29,7 @@
     <div id="background-container">
         <div class="container">
             <div class="row">
-                <div id="searchForm" class="col-md-12 shadow border rounded py-2 my-3">
+                <div id="searchForm" class="col-md-12">
                     <h2>Anesthetizing Stuff to Do!</h2>
                     <h4>Take your mind off your pain.</h4>
                     <br>
