updating event display to to show as cards / validated html / adding comments

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>Trip Over This</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/images/angry.ico" type="image/ico">
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
         crossorigin="anonymous">
+    <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <!-- Local Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -47,7 +52,7 @@
                     </form>
                     <br>
                     <div id="error-message"></div>
-                    <button class="btn btn-primary mb-2" role="button" id="get-info">Click the Fun Button! &raquo;</button>
+                    <button class="btn btn-primary mb-2" id="get-info">Click the Fun Button! &raquo;</button>
                 </div>
                 <div class="container">
                     <div class="row">
@@ -75,13 +80,15 @@
         </div>
     </div>
 
-    <!-- jQuery -->
+    <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
     <!-- Moment js to convert times from SeatGeek API-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
         crossorigin="anonymous"></script>
+    <!-- Local Script -->
     <script src="assets/js/app.js"></script>
 </body>
 
