--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <h1 class="display-4"><i class="far fa-angry animated hinge slow"></i>Trip Over This!</h1>
             <p>When you have to go somewhere you don't know, you don't want to be there, and you need distraction from your misery. 
-            <p>Do you have to travel to an all-day accounting meeting that your boss sent you to because she didn't want to go? Are you in an unfamiliar town becuase your uncle is marrying a stripper half his age? 
+            <p>Do you have to travel to an all-day accounting meeting that your boss sent you to because she didn't want to go? Are you in an unfamiliar town because your uncle is marrying a stripper half his age? 
             <p>Use this app to find something to help you relieve your frustrations.</p>
         </div>
     </div>
